# swcify

./: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .npmignore  .prettierignore  Cargo.toml  README.md  dev.yml  index.d.ts  index.esnext  index.js  index.mjs  index.ts  jest.js  loom.config.ts  package.json  sewing-kit.config.ts  shipit.yml  swcify.test.js  swcify.test.ts  tsconfig.json  webpack.js
.github/workflows/: build_and_commit_binaries.yml  build_native.yml  js_test.yml
.sewing-kit/cache/jest/: haste-map-ec6f7f5fa020cdfafa34df1a08563a18-14be2da352dd95aa93790de8bb710ff9-095ff647e4473fa2515a41953de2b170  perf-cache-ec6f7f5fa020cdfafa34df1a08563a18-d41d8cd98f00b204e9800998ecf8427e
.sewing-kit/config/jest/: root.config.js
js/: index.ts  jest.ts  types.ts  webpack.ts
js/tests/: jest.test.ts  swcify.test.ts  utilities.ts
src/: LICENSE.md  async_transform.rs  i18n_transform.rs  lib.rs  process.rs  transform.rs  util.rs  web_worker.rs  webworker_transform.rs
test-ref-gen/: package.json
test-ref-gen/scripts/: gen-file.sh  gen.sh
test-ref-gen/src/web-worker/: .babelrc
tests/: async_transform_tests.rs  fixture.rs  i18n_transform_tests.rs  util.rs  utilities.js  web_worker.rs  webworker_transform_tests.rs  ww.js
tests/fixture/async/base/: output.js
tests/fixture/async/default_packages/: input.js  output.js
tests/fixture/async/default_packages_multi/: input.js  output.js
tests/fixture/async/id_prop_exists/: input.js  output.js
tests/fixture/async/load_is_function_declaration/: input.js  output.js
tests/fixture/async/load_is_method/: input.js  output.js
tests/fixture/async/no_arguments/: input.js
tests/fixture/async/no_dynamic_import/: input.js  output.js
tests/fixture/async/no_load_prop/: input.js  output.js
tests/fixture/async/not_call_expression/: output.js
tests/fixture/async/not_function/: input.js  output.js
tests/fixture/async/not_object/: output.js
tests/fixture/async/unrelated_function/: input.js  output.js
tests/fixture/async/unrelated_function_call/: output.js
tests/fixture/i18n/inputs/: other_lib_useI18n_import.js
tests/fixture/i18n/outputs/: useI18n_dynamic_paths.js  useI18n_explict_paths_fallback.js  useI18n_explict_paths_single.js
tests/fixture/web-worker/allows for multiple workers to be created without naming collisions/: input.js  output.js
tests/fixture/web-worker/allows setting a custom worker file name using the webpackChunkName directive/: input.js  output.js
tests/fixture/web-worker/automatically proxies functions passed from the parent to the worker/: input.js  output.js
tests/fixture/web-worker/automatically released references to functions after a call-stack is finished/: input.js  output.js
tests/fixture/web-worker/calls into the module directly when not turned into a web worker/: config.json  input.js  output.js
tests/fixtures/i18n/inputs/: useI18n.js  (+9 more)
(+49 files in other folders)
