[package]
name = "swcify"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
backtrace = "0.3"
napi = { version = "1", features = ["serde-json"] }
napi-derive = "1"
path-clean = "0.1"
regex = "1.5"
serde = "1"
serde_json = "1"
swc = "0.30"
swc_atoms = "0.2.6"
swc_common = { version = "0.11.1", features = ["tty-emitter", "sourcemap"] }
swc_node_base = "0.2.0"
swc_ecmascript = { version = "0.46.0", features = ["codegen", "optimization", "parser", "react", "transforms", "typescript", "utils", "visit"] }
swc_ecma_preset_env = "0.29.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true