[package]
name = "swcify"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
backtrace = "0.3"
napi = { version = "1", features = ["serde-json"] }
napi-derive = { version = "1" }
path-clean = "0.1"
rustc-hash = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["unbounded_depth"] }
swc = "0.61.0"
swc_atoms = "0.2.7"
swc_common = { version = "0.13.2", features = ["tty-emitter", "sourcemap"] }
swc_node_base = "0.4.0"
swc_ecmascript = { version = "0.69.0", features = ["codegen", "optimization", "parser", "react", "transforms", "typescript", "utils", "visit"] }
swc_ecma_preset_env = "0.48.0"
maplit = "1.0.2"
radix_fmt = "1.0.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "1"

[dev-dependencies]
testing = "0.14.0"
swc_ecma_transforms_testing = "0.32"
ansi_term = "0.12.1"

[profile.release]
lto = true
