[package]
name = "swcify"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
backtrace = "0.3"
napi = { version = "1", features = ["serde-json"] }
napi-derive = "1"
path-clean = "0.1"
regex = "1.5"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1"
swc = "0.61.0"
swc_atoms = "0.2.6"
swc_common = { version = "0.13.2", features = ["tty-emitter", "sourcemap"] }
swc_node_base = "0.4.0"
swc_ecmascript = { version = "0.69.0", features = ["codegen", "minifier", "optimization", "parser", "react", "transforms", "typescript", "utils", "visit"] }
swc_ecma_preset_env = "0.48.0"
maplit = "1.0.2"
rustc-hash = "1.1.0"
tracing = { version = "0.1.29", features = ["release_max_level_off"] }

[lib]
crate-type = ["cdylib","rlib"]

[build-dependencies]
napi-build = "1"

[dev-dependencies]
swc_ecma_transforms_testing = "0.36.0"
testing = "0.14.1"

[profile.release]
lto = true
